[package]
name = "asc_mcp_server"
version = "0.1.0"
edition = "2024"
default-run = "asc_mcp_server"

[[bin]]
name = "asc_mcp_server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
zip = "0.6" # 用于解压文件
chrono = { version = "0.4", features = ["serde"] } # 用于时间戳
encoding_rs = "0.8" # 用于GBK编码支持
# 保留你之前的其它依赖
